[metadata]
long_description = file: README.md

[flake8]
ignore =
    # The default ignore list:
    E121,E123,E126,E226,E24,E704
exclude =
    .git,
    .venv,
    .vscode,
    __pycache__,
include =
    *.py
max-complexity = 10
max-line-length = 100
per-file-ignores =
    # __init__ modules export names
    **/__init__.py: F401

[tool:pytest]
testpaths = tests
python_files = test_*.py
addopts =
    --cov=src
    --cov-fail-under=50
